# TraversabilityAnalysis

./: .gitignore  CMakeLists.txt  README.md
include/: Cell.h  ColorUtil.h  Cylinder.h  DataLoader.h  Feature.h  Feature_.h  Metric.h  Normalizer.h  PcaMode.h  ProgressBar.hpp  Results.h  Synchro.h  TrainDataset.h  common_funcs.hpp  common_macro.hpp  cv_ext.h  svm.h
models/: test.yaml
models/results00/lv0/geom_pca/: 17_0.1921_0.0843_5000.yaml  norm_config17.yaml  pca_config17.yaml_eigenvalues  pca_config17.yaml_eigenvectors  pca_config17.yaml_mean  svm_model_17_0.1921_0.0843_5000.bin_1694680455729.params
models/results00/lv1/geom_pca_label/: 17_0.1944_0.0689_7500.yaml  norm_config17.yaml  pca_config17.yaml_eigenvalues  pca_config17.yaml_eigenvectors  pca_config17.yaml_mean  svm_model_17_0.1944_0.0689_7500.bin_1694682828015.params
models/results00/lv2/geom_pca_label/: 17_0.2009_0.0893_7500.yaml  norm_config17.yaml  pca_config17.yaml_eigenvalues  pca_config17.yaml_eigenvectors  pca_config17.yaml_mean  svm_model_17_0.2009_0.0893_7500.bin_1694713348332.params
src/: ColorUtil.cpp  Cylinder.cpp  DataLoader.cpp  Feature.cpp  Feature_.cpp  Metric.cpp  Normalizer.cpp  PcaMode.cpp  Results.cpp  Synchro.cpp  TrainDataset.cpp  main.cpp  mtmain.cpp  processSingleCloud.cpp  svm.cpp  test_labels.cpp  train.cpp  try_cyl.cpp
